src/linter/checks/snapshots/notabene__linter__checks__changes__tests__duplicate_change_type-2.snap
---
source: src/linter/checks/changes.rs
expression: linter.lint(&changelog)
---
- rule: DuplicateChangeType
  location:
    start: 1
    end: 18446744073709551615
  path: ~
- rule: DuplicateChangeType
  location:
    start: 2
    end: 18446744073709551615
  path: ~
